fixed bugs in keydown handler

--- a/connect.html
+++ b/connect.html
@@ -12,7 +12,7 @@
 
 <body>
     <div>Connect 4!</div>
-    <div>Turn: <span class="turn"></span></div>
+    <div>Turn: <div class="square turn"></div></div>
     <div class="grid"></div>
 
 
