--- a/connect.html
+++ b/connect.html
@@ -11,8 +11,10 @@
 </head>
 
 <body>
-    <div>Connect 4!</div>
-    <div>Turn: <div class="square turn"></div></div>
+    <div><h1>Connect 4!</h1></div>
+    <div><h1>Move: ◀ or ▶ ------- Drop Piece: Enter</h1></div>
+    <div><h1 class="inline-block">Turn: </h1><div class="square turn"></div>
+</div>
     <div class="grid"></div>
 
 
