added in winning conditions and restart button.

--- a/connect.html
+++ b/connect.html
@@ -13,7 +13,8 @@
 <body>
     <div><h1>Connect 4!</h1></div>
     <div><h1>Move: ◀ or ▶ ------- Drop Piece: Enter</h1></div>
-    <div><h1 class="inline-block">Turn: </h1><div class="square turn"></div>
+    <div><h1 class="inline-block">Turn: </h1><div class="square turn"></div> 
+    <button class="hide" id="restart">Restart!</button>
 </div>
     <div class="grid"></div>
 
